--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,8 +1,64 @@
-.container {
-  padding: 0 2rem;
+.title {
+  font-family: 'Mohave', sans-serif;
+  font-weight: Bold;;
+  font-size: 36px;
+  color: #000000;
+  letter-spacing:0;
+  line-height: 51px;
+  opacity: 1;
+  margin: 108px 633px 40px 601px;
+}
+.gri {
+  display: grid;
+  grid-template-columns: 280px 280px;
+  grid-template-rows: 69px 69px 69px;
+  grid-gap: 40px;
+  margin: auto 360px auto 400px;
+ 
+}
+.gri label{
+  font-family: 'Inter';
+  font-weight: 300;
+  font-size: 18px;
+  color: #000000;
+  letter-spacing: 0px;
+  line-height: 24px;
+  opacity: 1;
+}
+.gri input{
+  height: 40px;
+  width: 280px;
+  
 }
 
-.main {
+.text {
+  color: #777;
+}
+.btn {
+  display: block;
+  width: 150px;
+  padding: 8px 0;
+  margin: 20px auto;
+  background: #4979ff;
+  border-radius: 4px;
+  color: white;
+ /*  text-align: center; */
+  justify-content: center;
+  align-items: center;
+}
+
+/* .grid{
+  width: 1360px ;
+  height: 704px ;
+  background: #4979ff
+} */
+
+
+/* .container {
+  padding: 0 2rem;
+} */
+
+/* .main {
   min-height: 100vh;
   padding: 4rem 0;
   flex: 1;
@@ -10,24 +66,10 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-}
+} */
 
-.footer {
-  display: flex;
-  flex: 1;
-  padding: 2rem 0;
-  border-top: 1px solid #eaeaea;
-  justify-content: center;
-  align-items: center;
-}
 
-.footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-grow: 1;
-}
-
+/* 
 .title a {
   color: #0070f3;
   text-decoration: none;
@@ -42,6 +84,7 @@
 .title {
   margin: 0;
   line-height: 1.15;
+
   font-size: 4rem;
 }
 
@@ -65,15 +108,15 @@
     Bitstream Vera Sans Mono, Courier New, monospace;
 }
 
-.grid {
+/* .grid {
   display: flex;
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
   max-width: 800px;
-}
+} */
 
-.card {
+/* .card {
   margin: 1rem;
   padding: 1.5rem;
   text-align: left;
@@ -106,11 +149,23 @@
 .logo {
   height: 1em;
   margin-left: 0.5rem;
-}
+} */
 
-@media (max-width: 600px) {
+/* .image {
+  background-color: #cf2929;
+  width: 1360px;
+  height: 64px; 
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}  */
+
+
+
+/* @media (max-width: 1360px) {
   .grid {
     width: 100%;
     flex-direction: column;
   }
-}
+} */
