--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -28,6 +28,8 @@
 .gri input{
   height: 40px;
   width: 280px;
+  border: 1px solid #A7A9AB;
+  background: #FFFFFF 0% 0% no-repeat padding-box;
   
 }
 
