--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,18 +1,15 @@
 html,
 body {
   background: #f6f6f6;
-  justify-content: center;
 /*   max-width: 1360px;
   max-height: 1168px; */
-  padding: 0;
-  margin: 0;
-  font-family: 'Mohave', sans-serif;
+  font-family: 'Mohave' sans-serif;
 }
 
-a {
+/* a {
   color: inherit;
   text-decoration: none;
-}
+} */
 
 * {
   box-sizing: border-box;
@@ -74,8 +71,6 @@ button:hover{
 }
  footer .contact {
    margin-bottom: 16px;
-   /* padding: 48px 0px 16px 89px; */
-
 } 
 
 .row {
@@ -97,11 +92,8 @@ opacity: 1;
   flex-basis: 547px;
   height: 257px;
   margin: 54px 0 89px 60px;
-  
  }
- .p2{
-   margin-bottom: 24px;
- }
+ 
  .col:nth-of-type(2){
    height: 162px;
   flex-basis: 256px;
@@ -116,11 +108,16 @@ opacity: 1;
  } 
  
 .p2{
-  margin-bottom: 60px;
+  margin-bottom: 76px;
   width: 547px;
-  /* margin-top: 24px; */
   height:68px;
 }
+.p1,
+.p3,
+.p4{
+  margin-bottom: 8px;
+  margin-top: 8px;
+} 
 
 .col11{
   font-family:'Inter';
@@ -128,7 +125,6 @@ opacity: 1;
   font-size: 12px;
   color: #ffffff;
   letter-spacing: 0px;
-  line-height: 18px;
   opacity: 1;
 } 
 .social-icons {
