--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,11 +6,6 @@ body {
   font-family: 'Mohave' sans-serif;
 }
 
-/* a {
-  color: inherit;
-  text-decoration: none;
-} */
-
 * {
   box-sizing: border-box;
 }
@@ -51,7 +46,8 @@ footer {
 button{
   width: 160px;
   height: 40px;
-  margin: 70px 589px 108px 611px;  
+  margin: 70px 589px 108px 611px; 
+  padding: 9px 56px 10px 59px;
   background: #A7A9AB 0% 0% no-repeat padding-box;
   border: 1px solid #FFFFFF;
   opacity: 1;
