--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -50,9 +50,9 @@
   align-items: center;
 }
 
-/* @media (max-width: 1360px) {
-  .grid {
-    width: 100%;
+/*  @media (max-width: 136px) {
+  .button {
+    background: yellow;
     flex-direction: column;
   }
-} */
+}  */
