--- a/styles/globals.css
+++ b/styles/globals.css
@@ -136,12 +136,12 @@ opacity: 1;
  
 span{
   margin-right:8px;
+  
 }
 .contact-icons a{
   margin-bottom: 16px;
-  margin-right: 8px;
-  display: block;
-
+  display: flex;
+  background: transparent 0% 0% no-repeat padding-box;
   font-family:'Inter', sans-serif;
   font-weight: 200;
   font-size: 12px;
@@ -149,6 +149,10 @@ span{
   letter-spacing: 0px;
   line-height: 16px;
   opacity: 1;
+}
+.contact-icons{
+  width: 263px;
+  height: 112px;
 }
 ::placeholder{
   font-family: 'Inter', sans-serif;
@@ -172,5 +176,18 @@ span{
 .grid5 input:hover{
   color:#000000;
 }
+
+ .grid6 p{
+  font-family: 'Inter', sans-serif;
+  font-weight: 300;
+  font-size: 12px;
+  color: #A7A9AB;
+  letter-spacing: 0px;
+  line-height: 20px;
+  opacity: 1;
+  width: 204px;
+  height: 40px;
+  
+} 
 
 
