--- a/styles/globals.css
+++ b/styles/globals.css
@@ -105,6 +105,7 @@ opacity: 1;
   margin-bottom: 76px;
   width: 547px;
   height:68px;
+  line-height: 18px;
   
 }
 .p1,
@@ -127,7 +128,8 @@ opacity: 1;
   margin-top: 20px;
   display: flex;
 }
-.co, .items{
+.co, 
+.items{
   list-style: none;
 }
 span{
@@ -192,17 +194,19 @@ span{
   color:#000000;
 }
  .textt{
-  display:flex;
-  margin-top: 29px;
-  margin-left: 8px; 
-  font-family: 'Inter', sans-serif;
-  font-weight: 300;
-  font-size: 12px;
-  color: #A7A9AB;
-  opacity: 1;
-  background: transparent 0% 0% no-repeat padding-box;
-  width: 204px;
-  height: 40px; 
+   width: 150px;
+   height: 40px;
+   display:flex;
+   margin-top: 29px;
+   margin-left: 8px; 
+   font-family: 'Inter', sans-serif;
+   font-weight: 300;
+   line-height:20px;
+   font-size: 12px;
+   color: #A7A9AB;
+   opacity: 1;
+   background: transparent 0% 0% no-repeat padding-box;
+  
 
 } 
 .grid2,
