--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -12,8 +12,8 @@
   grid-template-columns:280px 280px; 
   grid-template-rows: 69px 69px 69px;
   grid-row-gap: 40px; 
-  width: 600px;
-  margin: auto /* 360px auto 400px */; 
+  /* width: 600px; */
+  margin: auto 360px auto 400px ; 
 } 
 
 .gri label{
