--- a/styles/globals.css
+++ b/styles/globals.css
@@ -56,7 +56,7 @@ footer {
   font-size: 18px;
   color: #ffffff;
 }
- .btn{
+ .send{
   display: flex;
   justify-content: center; 
   align-items: center; 
@@ -271,6 +271,17 @@ span {
   overflow: hidden;
   display: inline-block;
 }
+
+/* .btn1 {
+  border: 2px solid gray;
+  color: gray;
+  background-color: white;
+  padding: 8px 20px;
+  border-radius: 8px;
+  font-size: 20px;
+  font-weight: bold;
+  text-decoration: underline;
+} */
 
 .upload-btn-wrapper input[type=file] {
   font-size: 100px;
